Fix IE11 fetch + Promise | Retour à ES5 pour compat avant Babel | Fix font non chargée par FF

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Handlee";
+  src: url('../Handlee-Regular.ttf');
+}
+
 body {
   color: #666;
   font: 1.3em 'Handlee', cursive;
