--- a/views/recettes/edit.pug
+++ b/views/recettes/edit.pug
@@ -2,7 +2,8 @@ extends ../site/layout
 block extend_head
   link(rel='stylesheet', href='/stylesheets/recette-new.css')
   link(rel='stylesheet', href='/stylesheets/autocomplete.min.css')
-  script(src="../../javascripts/recette-new.js")
+  script(src="/javascripts/recette-new.js")
+  script(src="/javascripts/autocomplete.min.js")
 
 block content
 
