--- a/views/aromes/new.pug
+++ b/views/aromes/new.pug
@@ -1,6 +1,6 @@
 extends ../site/layout
 block extend_head
-  script(src="../javascripts/arome-new.js")
+  //- script(src="../javascripts/arome-new.js")
 block content
 
   h1 #{ title }
