--- a/views/recettes/all.pug
+++ b/views/recettes/all.pug
@@ -47,6 +47,6 @@ block content
                   span(recette-id=recette._id)=recette.likes.length
 
   if page > 1
-    a(href="http://localhost:3000/recettes/all/" + (page - 1)) Page précédente
+    a(href="/recettes/all/" + (page - 1)) Page précédente
   if recettes.length === 10
-    a(href="http://localhost:3000/recettes/all/" + (page + 1)) Page suivante
+    a(href="/recettes/all/" + (page + 1)) Page suivante
