--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -10,15 +10,13 @@ block content
       h1 Profil de #{ userDetails.local.pseudo }
 
     div 
-      b Profil
+      h3 Profil
     div Login : #{ userDetails.local.pseudo }
-    div
-      span Email
-      if (user._id.toString() === userDetails._id.toString())
+    if (user._id.toString() === userDetails._id.toString())
+      div
+        span Email
         input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="email", type="text", value=userDetails.email)
         input.pushable.btn-small(style="display: inline-block;" type="submit", value="Enregistrer")
-      else
-        span= userDetails.local.pseudo
     //- div Mon avatar
     hr
     div 
