--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -15,7 +15,7 @@ block content
     if (user._id.toString() === userDetails._id.toString())
       div
         span Email
-        input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="email", type="text", value=userDetails.email)
+        input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="email", type="email", value=userDetails.email)
         input.pushable.btn-small(style="display: inline-block;" type="submit", value="Enregistrer")
     //- div Mon avatar
     hr
