--- a/views/site/menu.pug
+++ b/views/site/menu.pug
@@ -65,7 +65,8 @@ nav
             a(href='/admin/users') Administration
 
   .brand-icon.col-50.left
-      a(no-border, href="/") Recipes
+      a(no-border, href="/")
+        img(src="/images/brand.png")
 
   .col-50.right
     .search-bar
