--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -171,7 +171,7 @@ h1, .h1 {
   margin-top: -8%;
 }
 
-input:not([type="submit"]), textarea, select {
+input[type="text"], input[type="number"], input[type="password"], input[type="email"], textarea, select {
   border: none;
   border-bottom: 1px solid #ccc;
   color: #578;
@@ -189,7 +189,7 @@ textarea {
   border-width: 1px;
 }
 
-input[type="text"], input[type="number"], input[type="password"], textarea, select, option {
+input[type="text"], input[type="number"], input[type="password"], input[type="email"], textarea, select, option {
   border-left: none;
   border-right: none;
   border-top: none;
