--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -158,7 +158,7 @@ main {
   }
 
   nav {
-    height: 110px;
+    height: 120px;
   }
 
   main {
@@ -190,6 +190,11 @@ main {
   position: fixed;
   top: 15px;
   left: 15px;
+}
+
+#drawer-btn:checked + label {
+  background-color: #fff;
+  z-index: 99999;
 }
 
 .drawer-btn > hr {
