--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -3,7 +3,12 @@
   src: url('../Handlee-Regular.ttf');
 }
 
+html,
 body {
+  min-height: 100%;
+}
+body {
+  background-color: #f2f2f2;
   color: #666;
   font: 1.3em 'Handlee', cursive;
   margin: 0;
@@ -29,6 +34,7 @@ main {
 
 nav {
   background-color: #09d;
+  box-shadow: 0px 2px 5px #444;
   color: white;
   display: flex;
   font-size: 1.3em;
@@ -134,6 +140,7 @@ nav a {
 }
 
 main {
+  background-color: #fff;
   height: 100%;
   padding: 20px;
   padding-top: 80px;
@@ -232,6 +239,7 @@ main {
   margin-left: -280px;
   padding: 0;
   padding-top: 0px;
+  padding-bottom: 40px;
   position: fixed;
   transition: margin-left 0.2s;
   width: 250px;
