--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -142,7 +142,7 @@ nav a {
 
 main {
   background-color: #fff;
-  height: 100%;
+  min-height: 100%;
   padding: 20px;
   padding-top: 80px;
   padding-bottom: 80px;
