--- a/views/recettes/edit.pug
+++ b/views/recettes/edit.pug
@@ -17,8 +17,9 @@ block content
         label
           b.col-20 Maturation recommandée : 
         .col-30.padded-right
-          input(name="maturation", type="number" placeholder="Combien de jours avant de déguster la recette", required, min="0", max="180", value=recette.maturation) 
-        span.col-10 jours
+          .recette-maturation
+            input(name="maturation", type="number" placeholder="Combien de jours avant de déguster la recette", required, min="0", max="180", value=recette.maturation) 
+            span jours
       li
         label
           b.col-20 Tags :
