--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,10 +46,11 @@ h2,
 
 h1,
 .h1 {
+  margin-top: 0;
   font-size: 55px !important;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
   :not(.drawer *) {
     margin: 5px 0;
     text-align: center !important;
@@ -100,12 +101,13 @@ h1,
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 950px) {
   .padded-right {
     padding-right: 20px;
   }
   .col-10 {
     display: inline-block;
+    min-width: 110px;
     width: 10%;
   }
   .col-20 {
@@ -273,7 +275,7 @@ footer span {
   transition: all 0.2s;
 }
 
-@media all and (min-width: 900px) {
+@media all and (min-width: 950px) {
   .btn-small {
     font-size: 0.9em !important;
     padding: 8px 25px !important;
