--- a/views/recettes/all.pug
+++ b/views/recettes/all.pug
@@ -1,7 +1,7 @@
 extends ../site/layout
 block extend_head
-  link(rel='stylesheet', href='/stylesheets/recettes.css')
-  script(src="/javascripts/recette.js")    
+  link(rel='stylesheet', href='/stylesheets/recettes.css' media='screen')
+  script(src="/javascripts/recette.js" async)    
 block content
 
   ul.recettes
