--- a/views/recettes/detail.pug
+++ b/views/recettes/detail.pug
@@ -1,6 +1,6 @@
 extends ../site/layout
 block extend_head
-  link(rel='stylesheet', href='/stylesheets/recette-new.css') 
+  link(rel='stylesheet', href='/stylesheets/recette-new.css' media='screen') 
 block content
 
   .col-80
