--- a/views/site/error.pug
+++ b/views/site/error.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div(style="text-align: center")
-    img(src="/images/mad-scientist.jpg", style="max-width: 700px; width: 100%")
+    img(src="/images/mad-scientist.jpg", style="max-width: 700px; width: 100%" alt='Image de scientifique fou.')
     h1| Oups
     h2= message
     h3= error.status
