--- a/views/site/index.pug
+++ b/views/site/index.pug
@@ -1,6 +1,6 @@
 extends layout
 block extend_head
-  link(rel='stylesheet', href='/stylesheets/home.css') 
+  link(rel='stylesheet', href='/stylesheets/home.css' media='screen') 
 
 block content
 
