--- a/views/admin/users.pug
+++ b/views/admin/users.pug
@@ -1,7 +1,7 @@
 extends ../site/layout
 block extend_head
-  link(rel='stylesheet', href='/stylesheets/admin.css')
-  script(src="/javascripts/admin.js")  
+  link(rel='stylesheet', href='/stylesheets/admin.css' media='screen')
+  script(src="/javascripts/admin.js" async)  
 block content
 
   h1 #{ title }
