--- a/views/recettes/edit.pug
+++ b/views/recettes/edit.pug
@@ -1,9 +1,9 @@
 extends ../site/layout
 block extend_head
-  link(rel='stylesheet', href='/stylesheets/recette-new.css')
-  link(rel='stylesheet', href='/stylesheets/autocomplete.min.css')
-  script(src="/javascripts/recette-new.js")
-  script(src="/javascripts/autocomplete.min.js")
+  link(rel='stylesheet', href='/stylesheets/recette-new.css' media='screen')
+  link(rel='stylesheet', href='/stylesheets/autocomplete.min.css' media='screen')
+  script(src="/javascripts/recette-new.js" async)
+  script(src="/javascripts/autocomplete.min.js" async)
 
 block content
 
