--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -1,6 +1,6 @@
 extends ../site/layout
 block extend_head
-  link(rel='stylesheet', href='/stylesheets/login.css' media='screen')
+  link(rel='stylesheet', href='/stylesheets/login.css', media='screen')
 block content
 
   .center
