Extracts comment function to Recette service

--- a/views/recettes/detail.pug
+++ b/views/recettes/detail.pug
@@ -85,3 +85,4 @@ block content
             textarea(name="comment", rows=4, placeholder="Super recette !")
           .col-50
             input.pushable.btn-small(type="submit", value="Poster")
+            input(type="hidden" name="_csrf" value=csrfToken)
