Changes the logo's redirection to Recettes

--- a/views/site/menu.pug
+++ b/views/site/menu.pug
@@ -1,6 +1,6 @@
 nav
   .brand-icon.col-50.left
-      a(no-border, href="/")
+      a(no-border, href="/recettes/")
         img(src="/images/brand.png")
 
   .col-50.right
