--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Handlee';
+  font-family: 'Handlee-local';
   src: url('../Handlee-Regular.ttf');
 }
 
@@ -11,7 +11,7 @@ body {
 body {
   background-color: #f2f2f2;
   color: #666;
-  font: 1.3em 'Handlee', cursive;
+  font: 1.3em 'Handlee-local', 'Handlee', cursive;
   margin: 0;
   overflow-x: hidden;
   padding: 0;
