--- a/views/site/layout.pug
+++ b/views/site/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(href="https://fonts.googleapis.com/css?family=Handlee&display=swap", rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/layout.css', media='screen')
     link(rel='stylesheet', href='/stylesheets/style.css', media='screen')
     link(rel='stylesheet', href='/stylesheets/icons.css', media='screen')
