--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -19,10 +19,10 @@ block content
       div
         span URL de l'avatar
         input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="avatarUrl", type="text", value=userDetails.avatarUrl)
-        input.pushable.btn-small(style="display: inline-block;" type="submit", value="Enregistrer")
       div
         span Email
         input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="email", type="email", value=userDetails.email)
+      div
         input.pushable.btn-small(style="display: inline-block;" type="submit", value="Enregistrer")
         
     //- div Mon avatar
