Moves profile view to a separate folder This is to make each view more like a "component" Where the route/view matches the purpose

--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -1,10 +1,11 @@
 extends ../site/layout
+block extend_head
+  script(src="/javascripts/profile.js" async)
 
 block content
 
   form.recette(method="POST")
-    input(type="hidden" name="_csrf" value=csrfToken)
-
+    
     if (user._id.toString() === userDetails._id.toString())
       h1 Bienvenue #{ user.local.pseudo }
     else
@@ -20,12 +21,15 @@ block content
         span URL de l'avatar
         input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="avatarUrl", type="text", value=userDetails.avatarUrl)
       div
+        span Uploader mon avatar
+        input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="avatarImage", type="file")
+      div
         span Email
         input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="email", type="email", value=userDetails.email)
       div
         input.pushable.btn-small(style="display: inline-block;" type="submit", value="Enregistrer")
-        
-    //- div Mon avatar
+        input(type="hidden" name="_csrf" value=csrfToken)
+    
     hr
     div 
       h3 Activité
