--- a/views/site/index.pug
+++ b/views/site/index.pug
@@ -19,6 +19,6 @@ block content
 
     if (!user)
       p.center 
-        a.login(href='/users/signup') S'enregistrer
+        a.login(href='/authentication/signup') S'enregistrer
         span &nbsp;&nbsp;&nbsp;
-        a.login(href='/users/login') Se connecter
+        a.login(href='/authentication/login') Se connecter
