--- a/views/authentication/login.pug
+++ b/views/authentication/login.pug
@@ -5,7 +5,7 @@ block content
 
   .center
 
-    h1 Inscription
+    h1 Connexion
 
     form(method="POST")
         label
@@ -19,4 +19,4 @@ block content
         input(type="password", name="password")
         input.pushable(type="submit", value="C'est parti !")
         input(type="hidden" name="_csrf" value=csrfToken)
-        a(href="/users/login") Déjà enregistré ? Se connecter
+        a(href="/authentication/signup") Pas encore inscrit ? S'enregistrer
