--- a/views/site/menu.pug
+++ b/views/site/menu.pug
@@ -65,26 +65,14 @@ nav
           span Profil
         if (!user)
           li
-            a(href='/users/login') Connexion
+            a(href='/authentication/login') Connexion
           li
-            a(href='/users/signup') Inscription
+            a(href='/authentication/signup') Inscription
         else
           li
-            a(href='/users/profile') Mon profil
+            a(href='/profile') Mon profil
           li
-            a(href='/users/logout') Déconnexion
+            a(href='/authentication/logout') Déconnexion
           if (user.local.pseudo === "Tete1805")
             li
               a(href='/admin/users') Administration
-  //-     span Profil
-  //-       ul
-  //-         if (!user)
-  //-           li
-  //-             a(href='/users/login') Connexion
-  //-           li
-  //-             a(href='/users/signup') Inscription
-  //-         else
-  //-           li
-  //-             a(href='/users/profile') Mon profil
-  //-           li
-  //-             a(href='/users/logout') Déconnexion
