--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -12,14 +12,14 @@ block content
       h1 Profil de #{ profile.details.local.pseudo }
 
     div
-      img(src=profile.details.avatarUrl || "/images/default-avatar.png")
+      img(src=profile.details.avatar || "/images/default-avatar.png")
     div 
       h3 Profil
     div Pseudo : #{ profile.details.local.pseudo }
     if (user._id.toString() === profile.details._id.toString())
       div
         span URL de l'avatar
-        input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="avatarUrl" type="text" value=profile.details.avatarUrl)
+        input.inline-block(style="margin: 0 25px 5px 15px; width: 300px !important" name="avatar" type="text" value=profile.details.avatar)
       div
         span Uploader mon avatar
         input.inline-block(id="avatarInputFile" style="margin: 0 25px 5px 15px; width: 300px !important" type="file" accept="image/*")
